--- a/interactiveDiary/src/App.css
+++ b/interactiveDiary/src/App.css
@@ -12,6 +12,27 @@
   margin: auto;
 }
 
-.btn{
-  margin-bottom: 100%;
+.btn-option{
+  height: 25%;
+  width: 50%;
+  padding: 40%;
+}
+
+.diary-text{
+  letter-spacing: 2px;
+}
+
+.fadeOut{
+  opacity:0;
+  width:0;
+  height:0;
+  transition: width 0.5s 0.5s, height 0.5s 0.5s, opacity 0.5s;
+
+}
+.fadeIn{
+  opacity:1;
+  width:100px;
+  height:100px;
+  transition: width 0.5s, height 0.5s, opacity 0.5s 0.5s;
+
 }
