--- a/interactiveDiary/src/index.css
+++ b/interactiveDiary/src/index.css
@@ -14,6 +14,41 @@
   -webkit-text-size-adjust: 100%;
 }
 
+.App {
+  padding: 15px;
+}
+
+.list {
+  height: 100vh;
+  border: 3px solid #333;
+}
+
+.card {
+  margin: 10px;
+  border: 3px solid #333;
+  width: 300px;
+  min-height: 150px;
+  box-shadow: 3px 3px 3px #555;
+  background-color: #f5f3f3;
+}
+
+.card:hover {
+  cursor: pointer;
+}
+
+.header {
+  border-bottom: 2px solid #333;
+  padding: 5px 8px;
+  background-color: #c3d3f9;
+  text-align: center;
+  font-weight: 600;
+  min-height: 20px;
+}
+
+.content {
+  padding: 5px 10px;
+}
+
 a {
   font-weight: 500;
   color: #646cff;
